Establish appointment in MediBase